--- a/PursuitCapture/App.config
+++ b/PursuitCapture/App.config
@@ -28,6 +28,9 @@
             <setting name="PreviewInterval" serializeAs="String">
                 <value>2000</value>
             </setting>
+            <setting name="RegEx" serializeAs="String">
+                <value>False</value>
+            </setting>
             <setting name="SaveTo" serializeAs="String">
                 <value />
             </setting>
